--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="robots" content="index,follow">
+    <meta property="og:title" content="Darko AR">
+    <meta property="og:site_name" content="Darko AR">
+    <meta property="og:type" content="website">
+    <meta name="description" content="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Darko AR</title>
 </head>
 <body style="background-color: #f3eeec">
 <noscript>
