--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,27 @@
     <meta property="og:title" content="Darko AR">
     <meta property="og:site_name" content="Darko AR">
     <meta property="og:type" content="website">
-    <meta name="description" content="Darko Mitev is an international fashion photographer that creates art in his free time.">
+    <meta name="description"
+          content="Darko Mitev is an international fashion photographer that creates art in his free time.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Darko AR</title>
+    <!-- Hotjar Tracking Code for https://darkoar.com/#/ -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hjfunction()
+            {
+                (h.hj.q = h.hj.q[]).push(arguments)
+            }
+            ;
+            h._hjSettings = {hjid: 3509985, hjsv: 6};
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=%27);
+    </script>
 </head>
 <body style="background-color: #f3eeec">
 <noscript>
