--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
     <meta property="og:site_name" content="Darko AR">
     <meta property="og:type" content="website">
     <meta name="description"
-          content="Darko Mitev is an international fashion photographer that creates art in his free time.">
+          content="Darko Mitev is an international fashion photographer and art director">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Darko AR</title>
     <!-- Hotjar Tracking Code for https://darkoar.com/#/ -->
     <script>
-        (function(h, o, t, j, a, r) {
-            h.hj = h.hj || function() {
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () {
                 (h.hj.q = h.hj.q || []).push(arguments);
             };
-            h._hjSettings = { hjid: 3509985, hjsv: 6 };
+            h._hjSettings = {hjid: 3509985, hjsv: 6};
             a = o.getElementsByTagName('head')[0];
             r = o.createElement('script');
             r.async = 1;
